# vps-manager

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_vps_manager.bat  run_vps_manager.sh
scripts/: example_script.sh
src/: __init__.py  __main__.py  ansi_parser.py  app.py  database.py  dialogs.py  main.py  ssh_worker.py  styles.py
tests/: __init__.py
