[project]
name = "vps-manager"
version = "0.1.0"
description = "SSH-based VPS manager with PySide6 GUI"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5.0,<7",
    "paramiko>=3.0.0,<4",
]

[dependency-groups]
dev = ["ruff", "ty"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["D"]

[tool.ty.environment]
python-version = "3.11"
